--- a/gallery.css
+++ b/gallery.css
@@ -181,6 +181,28 @@ body {
 
 
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin: 32px 0;
+}
+
+.pagination button {
+  padding: 6px 12px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  background: #000;
+  color: #fff;
+}
+
+
+
+
 /* MAKE PAGE HEIGHT FULL */
 html, body {
   height: 100%;
